--- a/config/config.json
+++ b/config/config.json
@@ -23,9 +23,9 @@
     "client_id": "8002982999216703",
     "client_secret": "qs8ZelPRDDgJXXWKJjFI8rcfv48jmfmc",
     "back_urls" : {
-      "success": "http://localhost:8080/success",
-      "failure": "http://localhost:8080/error"
+      "success": "http://stadium.sagal.io/success",
+      "failure": "http://stadium.sagal.io/error"
     },
-    "notification_url": "http://localhost:8080/api/notification"
+    "notification_url": "http://stadium.sagal.io/api/notification"
   }
 }
